--- a/static/css/main.css
+++ b/static/css/main.css
@@ -314,9 +314,6 @@ div.album-container div.new-release:hover > * {
   div.album-container div.new-release {
     margin: 0;
     border-radius: 0;
-    background-attachment: fixed;
-    background-size: auto 100vh;
-    background-position: top;
   }
   div.album-container div.new-release h3 {
     font-size: 8vw;
@@ -325,10 +322,16 @@ div.album-container div.new-release:hover > * {
     height: 20vw;
     margin: 2.5vw;
   }
-  div.album-container div.new-release:hover, div.album-container div.new-release.show-details {
-    background-size: auto 100vh;
+  div.album-container div.new-release:hover {
+    background-size: 100% auto;
   }
-  div.album-container div.new-release:hover > *, div.album-container div.new-release.show-details > * {
+  div.album-container div.new-release:hover > * {
+    opacity: 0;
+  }
+  div.album-container div.new-release.show-details {
+    background-size: 110% auto;
+  }
+  div.album-container div.new-release.show-details > * {
     opacity: 1;
   }
 }
